--- a/src/View/GUIHoteles/GUIBuscarHotel.form
+++ b/src/View/GUIHoteles/GUIBuscarHotel.form
@@ -188,9 +188,14 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/View/Images/home_wallpaper_0.png"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="-7" y="-4" width="590" height="330"/>
+          <AbsoluteConstraints x="3" y="-4" width="580" height="330"/>
         </Constraint>
       </Constraints>
     </Component>
