--- a/src/View/GUIHoteles/GUIEliminarHotel.form
+++ b/src/View/GUIHoteles/GUIEliminarHotel.form
@@ -213,9 +213,14 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel10">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/View/Images/home_wallpaper_0.png"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="-330" y="-50" width="930" height="360"/>
+          <AbsoluteConstraints x="0" y="0" width="600" height="310"/>
         </Constraint>
       </Constraints>
     </Component>
