--- a/src/View/GUIPromociones/GUIAgregarPromo.form
+++ b/src/View/GUIPromociones/GUIAgregarPromo.form
@@ -183,6 +183,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="color">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/View/Images/home_wallpaper_0.png"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
