--- a/src/View/GUIPromociones/GUIEliminarPromo.form
+++ b/src/View/GUIPromociones/GUIEliminarPromo.form
@@ -145,9 +145,14 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/View/Images/home_wallpaper_0.png"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="-400" y="0" width="1060" height="360"/>
+          <AbsoluteConstraints x="0" y="0" width="650" height="360"/>
         </Constraint>
       </Constraints>
     </Component>
