--- a/src/View/GUIPromociones/GUIModificarPromo.form
+++ b/src/View/GUIPromociones/GUIModificarPromo.form
@@ -158,9 +158,14 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/View/Images/home_wallpaper_0.png"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="30" y="10" width="430" height="290"/>
+          <AbsoluteConstraints x="0" y="0" width="500" height="320"/>
         </Constraint>
       </Constraints>
     </Component>
